fix all warnings due to new JDK deprecations